<resources>
    <string name="app_name">艺搭环保</string>

    <!--确认按钮 -->
    <string name="txt_bt_sure">确认</string>

    <!--登录、注册页 -->
    <string name="txt_title_login">登录</string>
    <string name="txt_title_register">注册</string>
    <string name="txt_register">立即注册</string>
    <string name="txt_phone">手机号</string>
    <string name="txt_phone_hint">请输入手机号码</string>
    <string name="txt_code">验证码</string>
    <string name="txt_code_hint">请输入验证码</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="txt_not_register">还没有账号？<u>立即注册</u></string>
    <string name="txt_to_login">已有账号？<u>立即登录</u></string>

    <string name="txt_title_supply">完善注册信息</string>
    <string name="txt_logo_supply">感谢您注册艺搭\n请完善您的注册信息</string>
    <string name="txt_supply_name">姓名</string>
    <string name="txt_supply_sex">性别</string>
    <string name="txt_supply_sex_male">男</string>
    <string name="txt_supply_sex_female">女</string>
    <string name="txt_supply_name_hint">请输入您的姓名</string>

    <!--首页 -->
    <string name="txt_home_plan_shop_name">方案商城\nSOLUTIONS</string>
    <string name="txt_home_design_name">特展设计\nDESIGN</string>
    <string name="txt_home_orders_name">我的订单\nORDERS</string>
    <string name="txt_home_service_name">客户服务\nSERVICE</string>
    <string name="txt_home_user_center_name">个人中心\nUSER CENTER</string>

    <!--个人中心 -->
    <string name="txt_user_center_title">个人中心</string>

    <string name="txt_user_center_info">个人信息</string>
    <string name="txt_user_center_order">我的订单</string>
    <string name="txt_user_center_bill">我的开票信息</string>
    <string name="txt_user_center_venue">我的场馆</string>
    <string name="txt_user_center_service">联系客服</string>
    <string name="txt_user_center_setting">设置</string>

    <!--我的开票信息 -->
    <string name="txt_bill_type_name">发票类型</string>
    <string name="txt_bill_info_name">税号\n单位地址\n电话号码\n开户银行\n银行账户\n电子邮箱\n快递地址</string>

    <!--我的场馆-->
    <string name="txt_venue_info_name">场馆地址\n场馆联系人\n场馆联系人手机</string>

    <!--租赁设备-->

    <!--我的场馆-->
    <string name="txt_order_venue_info_name">场馆名称\n场馆地址\n场馆联系人\n场馆联系人手机</string>


    <!--订单详情-->
    <string name="txt_order_detail_invoice_name">发票\n发票类型\n收货人\n收货人联系方式\n收货地址</string>
    <string name="txt_order_detail_venue_name">场馆名称\n场馆地址\n场馆联系人\n场馆联系人手机\n施工方联系人\n施工方联系人手机</string>


    <!-- Request permission start -->
    <string name="rationale_record_voice">This app needs access microphone to record voice.</string>
    <string name="rationale_photo">This app needs access photos.</string>
    <string name="rationale_camera">This app needs access camera.</string>
    <!-- Request permission end -->


    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>

    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>
</resources>
