<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_register">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TxtTitleWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_title_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_phone_value"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:background="@null"
        android:ems="11"
        android:gravity="left|center_vertical|fill_vertical"
        android:hint="@string/txt_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:textColorHint="@color/common_hint_text"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_name" />

    <TextView
        android:id="@+id/tv_phone_name"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_phone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_phone_value"
        app:layout_constraintStart_toStartOf="@+id/line" />

    <EditText
        android:id="@+id/edt_code_value"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:digits="1234567890qazwsxedcrfvtgbyhnujmikolpQAZWSXEDCRFVTGBYHNUJMIKOLP"
        android:ems="11"
        android:gravity="left|center_vertical"
        android:hint="@string/txt_code_hint"
        android:inputType="number"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_text"
        app:layout_constraintEnd_toEndOf="@+id/edt_phone_value"
        app:layout_constraintStart_toStartOf="@+id/edt_phone_value"
        app:layout_constraintTop_toTopOf="@+id/line" />

    <TextView
        android:id="@+id/tv_code_name"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_code"
        app:layout_constraintEnd_toEndOf="@+id/tv_phone_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_phone_name"
        app:layout_constraintTop_toTopOf="@+id/edt_code_value" />

    <Button
        android:id="@+id/bt_getcode"
        style="@style/TxtCommonWhiteLittle"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bt_fillet_selector"
        android:ems="11"
        android:gravity="center"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/txt_get_code"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_phone_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:srcCompat="@drawable/logo_big" />

    <Button
        android:id="@+id/bt_register"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bt_green_selector"
        android:text="@string/txt_register"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintStart_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/edt_code_value" />

    <TextView
        android:id="@+id/tv_toLogin"
        style="@style/TxtCommonWhiteSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="all"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txt_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_register"
        app:layout_constraintVertical_bias="0.081" />


</android.support.constraint.ConstraintLayout>