<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_login">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TxtTitleWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_title_supply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_phone_value"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:background="@null"
        android:ems="11"
        android:gravity="left|center_vertical|fill_vertical"
        android:hint="@string/txt_supply_name_hint"
        android:inputType="none"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_text"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_name" />

    <TextView
        android:id="@+id/tv_phone_name"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_supply_name"
        app:layout_constraintBottom_toBottomOf="@+id/edt_phone_value"
        app:layout_constraintStart_toStartOf="@+id/line" />

    <TextView
        android:id="@+id/tv_code_name"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_supply_sex"
        app:layout_constraintEnd_toEndOf="@+id/tv_phone_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_phone_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_name" />

    <Button
        android:id="@+id/bt_login"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bt_green_selector"
        android:text="@string/txt_bt_sure"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/tv_code_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="173dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/edt_phone_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txt_logo_detail"
            style="@style/TxtTitleWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/txt_logo_supply" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edt_phone_value"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rdbt_male"
            style="@style/TxtCommonWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/bt_green_radiobt_selector"
            android:drawablePadding="18dp"
            android:gravity="left|center_vertical"
            android:text="@string/txt_supply_sex_male" />

        <RadioButton
            android:id="@+id/rdbt_female"
            style="@style/TxtCommonWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/bt_green_radiobt_selector"
            android:drawablePadding="18dp"
            android:gravity="left|center_vertical"
            android:text="@string/txt_supply_sex_female"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_name"
            tools:layout_editor_absoluteY="268dp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>