<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:background="@drawable/bg_main"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_home_user_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_personal_center_circle" />

        <TextView
            android:id="@+id/txt_home_title"
            style="@style/TxtTitleWhiteNormal"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/img_home_user_center"
            app:layout_constraintEnd_toStartOf="@+id/img_home_service"
            app:layout_constraintStart_toEndOf="@+id/img_home_user_center"
            app:layout_constraintTop_toTopOf="@+id/img_home_user_center"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_home_service"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_home_user_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_home_user_center"
            app:srcCompat="@drawable/img_customer_service" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="296dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="192dp" />

        <TextView
            android:id="@+id/bt_solutions"
            style="@style/TxtCommonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:drawableTop="@drawable/img_home_plan_shop"
            android:gravity="center"
            android:text="@string/txt_home_plan_shop_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_home_logo" />

        <TextView
            android:id="@+id/bt_design"
            style="@style/TxtCommonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:drawableTop="@drawable/img_home_design"
            android:gravity="center"
            android:text="@string/txt_home_design_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/bt_solutions"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_home_title"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@drawable/logo_big" />

        <TextView
            android:id="@+id/bt_order"
            style="@style/TxtCommonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:drawableTop="@drawable/img_home_my_order"
            android:gravity="center"
            android:text="@string/txt_home_orders_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_solutions" />

        <TextView
            android:id="@+id/bt_service"
            style="@style/TxtCommonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/img_home_customer_service"
            android:gravity="center"
            android:text="@string/txt_home_service_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/bt_order" />

        <TextView
            android:id="@+id/bt_user_center"
            style="@style/TxtCommonWhiteSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:drawableLeft="@drawable/img_home_personal_center"
            android:gravity="left|center_vertical"
            android:text="@string/txt_home_user_center_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_order" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
