<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RadioButton
        android:id="@+id/rdbt_select"
        style="@style/TxtCommonWhiteNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:button="@null"
        android:checked="true"
        android:drawableLeft="@drawable/bt_green_radiobt_selector"
        android:drawablePadding="18dp"
        android:gravity="left|center_vertical"
        android:text="@string/txt_supply_sex_male"
        app:layout_constraintEnd_toStartOf="@+id/img_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/rdbt_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rdbt_select"
        app:srcCompat="@drawable/bt_delete" />

    <ImageView
        android:id="@+id/img_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_delete"
        app:layout_constraintEnd_toStartOf="@+id/img_delete"
        app:layout_constraintTop_toTopOf="@+id/img_delete"
        app:srcCompat="@drawable/bt_edit" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/rdbt_select"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/img_bill" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TxtCommonGrayNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_bill_type_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/rdbt_select" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txt_bill_type"
        style="@style/TxtCommonBlackNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_info_name"
        style="@style/TxtCommonGraySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="2dp"
        android:gravity="right|center_vertical"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/txt_bill_info_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_info_value"
        style="@style/TxtCommonBlackSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="left|center_vertical"
        android:lineSpacingMultiplier="1.2"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txt_bill_type"
        app:layout_constraintTop_toBottomOf="@+id/txt_bill_type" />


</android.support.constraint.ConstraintLayout>